[package]
name = "roi"
version = "0.1.0"
authors = ["nacika"]

[dependencies]
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp.git" }
rustc-serialize = "0.3"
num_cpus = "1.0"
env_logger = { version = "0.3.4", default-features = false }
serde_json = "0.8"
futures = "0.1.11"
tokio-core = "0.1.0"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
statsd = "0.1.0"
time = "*"
url = "1.4.0"

